--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <h1> NIC FAN CLUB </h1>
+
+<link rel="stylesheet" href="custom.css">
+
+  <body class = "p1">
+  </body>
+
+  <h1 class= "p2"> NIC FAN CLUB </h1>
+
+<div class="p3">
   <h2> BEST QUALITIES OF NIC </h2>
   <ul>
       <li> Best teacher </li>
@@ -14,5 +22,6 @@
       <li> Whatsapp </li>
   </ol>
   <p> Nic is the best!!! </p>
+</div>
 
 </html>
