--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li> Best teacher </li>
       <li> Tall </li>
       <li> COOOOOOOOOOOOOLLL </li>
+      <li> COOOOOOOOOOOOLLL </li>
   </ul>
   <h3> WHERE TO FIND NIC </h3>
   <ol>
